syntax = "proto3";

package proto;

service EmojiService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
  rpc InsertEmojis (EmojiRequest) returns (EmojiResponse){};
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string name = 1;
}

message EmojiRequest {
  string input_text = 1;
}

message EmojiResponse {
  string output_text = 1;
}
